--- a/app/views/application/_staff_navbar.html.erb
+++ b/app/views/application/_staff_navbar.html.erb
@@ -24,6 +24,14 @@
           clinical_sites_path) %></li>
         </ul>
       </li>
+
+      <li class="dropdown active">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administration <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li> <%= link_to("Praxis Result Resolution", praxis_result_temps_path) %> </li>
+        </ul>
+      </li>
+      
     </ul>
 
   </div>
