add features to navbars
concerns dashobard to students#index
praxis resolve -> admin, staff, stu_labor
advisees tab -> students

--- a/app/views/application/_advisor_navbar.html.erb
+++ b/app/views/application/_advisor_navbar.html.erb
@@ -3,7 +3,7 @@
       <span class="navbar-brand">Education Studies Dashboard</span>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><%= link_to("Advisees", students_path) %></li>
+      <li class="active"><%= link_to("Students & Advisees", students_path) %></li>
 
       <li class="dropdown active">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Field Experience <span class="caret"></span></a>
