--- a/app/views/application/_stu_labor_navbar.html.erb
+++ b/app/views/application/_stu_labor_navbar.html.erb
@@ -3,7 +3,7 @@
       <span class="navbar-brand">Education Studies Dashboard</span>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><%= link_to("Advisees", students_path) %></li>
+      <li class="active"><%= link_to("Students & Advisees", students_path) %></li>
       <li class="active"><%= link_to("Praxis Registration", new_praxis_result_path) %></li>
       <li class="dropdown active">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Field Experience <span class="caret"></span></a>
@@ -13,6 +13,12 @@
           clinical_teachers_path) %></li>
           <li><%= link_to("Clinical Sites",
           clinical_sites_path) %></li>
+        </ul>
+      </li>
+      <li class="dropdown active">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administration <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li> <%= link_to("Praxis Result Resolution", praxis_result_temps_path) %> </li>
         </ul>
       </li>
     </ul>
