--- a/app/views/praxis_results/_form.html.erb
+++ b/app/views/praxis_results/_form.html.erb
@@ -1,24 +1,37 @@
 
 
 <tr>
-  <th> <%= f.label(:AltID, "Name")%> </th>
-  <td> <%= f.select(:AltID, @students.map {|s| [name_details(s), s.AltID]}, {:prompt => 'Select a name'}) %></td>
+  <th> <%= f.label(:student_id, "Name")%> </th>
+  <td> <%= f.select(:student_id, @students.map {|s| [s.name_readable, s.id]}, {:prompt => 'Select a name'}) %></td>
 </tr>
 
 <tr>
   <th> <%= f.label(:praxis_test_id, "Test Name")%> </th>
-  <td> <%= f.select(:praxis_test_id,  @test_options.map {|t| [t.TestName, t.TestCode]}, 
+  <td> <%= f.select(:praxis_test_id,  @test_options.map {|t| [t.TestName, t.TestCode]},
   {:prompt => 'Select a test'}) %></td>
 </tr>
 
 <tr>
   <th> <%= f.label(:test_date, "Test Date")%> </th>
-  <td> <%= f.datetime_select(:test_date, {:include_blank => true, :default => nil, :order => [:month, :day, :year, :hour, :minute ], :minute_step => 5})  %></td>
+
+  <td>
+    <%= render(partial: 'date_picker', :locals => {
+        f: f,
+        field: :test_date,
+        default: Date.today
+      } )%>
+  </td>
 </tr>
 
 <tr>
   <th> <%= f.label(:reg_date, "Regsitration Date")%> </th>
-  <td> <%= f.date_select(:reg_date, {:order => [:month, :day, :year], default: Date.today})  %></td>
+  <td>
+    <%= render(partial: 'date_picker', :locals => {
+        f: f,
+        field: :reg_date,
+        default: Date.today
+      } )%>
+  </td>
 </tr>
 
 <tr>
