--- a/app/views/application/_staff_navbar.html.erb
+++ b/app/views/application/_staff_navbar.html.erb
@@ -29,6 +29,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administration <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li> <%= link_to("Praxis Result Resolution", praxis_result_temps_path) %> </li>
+          <li> <%= link_to("All students", reports_path) %></li>
         </ul>
       </li>
 
