andand protecting for nil GPA values in prog_exit
also adding option for ? if .good_gpa? == nil

--- a/app/views/prog_exits/index.html.erb
+++ b/app/views/prog_exits/index.html.erb
@@ -53,10 +53,12 @@
       <td><%= exit.program.EDSProgName %> </td>
 
       <td>
-        <% if exit.good_gpa? %>
+        <% if exit.good_gpa? == true %>
           <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-        <% else %>
+        <% elsif exit.good_gpa? == false %>
           <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        <% else %>
+          <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
         <% end %>
       </td>
 
