EDS150 added to reports

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -17,10 +17,11 @@
             <th>Major 2</th>
             <th>Conc 2</th>
             <th>Minors</th>
+            <th>Completed 150</th>
             <th>Taken 227/228</th>
             <th>Completed 227/228</th>
             <th>Term completing 227</th>
-            <th>Term completing 227</th>
+            <th>Term completing 228</th>
             <th>EDS440 or EDS470</th>
           </tr>
         </thead>
@@ -35,6 +36,7 @@
             <td><%= stu[:CurrentMajor2]%></td>
             <td><%= stu[:concentration2]%></td>
             <td><%= stu[:CurrentMinors]%></td>
+            <td><%= stu[:Latest_Term_EDS150]%></td>
             <td><%= stu[:Taken227_228]%></td>
             <td><%= stu[:Passed_227_228]%></td>
             <td><%= stu[:Latest_Completion_227]%></td>
