Corrected index page to show EDS150

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -12,6 +12,7 @@
     "Major 2",
     "Conc 2",
     "Minors",
+    "EDS150"
     "Taken 227/228",
     "Completed 227/228",
     "Term completing 227",
@@ -46,6 +47,7 @@
         <td><%= stu[:CurrentMajor2]%></td>
         <td><%= stu[:concentration2]%></td>
         <td><%= stu[:CurrentMinors]%></td>
+        <td><%= stu[:Latest_Term_EDS150]%></td>
         <td><%= stu[:Taken227_228]%></td>
         <td><%= stu[:Passed_227_228]%></td>
         <td><%= stu[:Latest_Completion_227]%></td>
