adding program to reports controller

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -12,7 +12,7 @@
     "Major 2",
     "Conc 2",
     "Minors",
-    "EDS150"
+    "EDS150",
     "Taken 227/228",
     "Completed 227/228",
     "Term completing 227",
