Program Tests Need work

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -7,6 +7,7 @@
   <% headers = ["B#",
     "Name",
     "Prog Status",
+    "Program(s)",
     "Major 1",
     "Conc 1",
     "Major 2",
@@ -42,6 +43,7 @@
         <td><%= stu[:Bnum] %></td>
         <td><%= stu[:name_readable] %></td>
         <td><%= stu[:prog_status] %></td>
+        <td><%= stu[:ProgName] %></td>
         <td><%= stu[:CurrentMajor1]%></td>
         <td><%= stu[:concentration1]%></td>
         <td><%= stu[:CurrentMajor2]%></td>
