--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -49,7 +49,7 @@
     
     <tr>
       <th>Programs</th>
-      <td><%= @student.programs %></td>
+      <td><%= @student.programs.pluck("EDSProgName").join("; ") %></td>
     </tr>
     
     <tr>
@@ -79,5 +79,4 @@
     </tr>
 
   </table>
-
 </div>
