--- a/app/views/clinical_teachers/_form.html.erb
+++ b/app/views/clinical_teachers/_form.html.erb
@@ -25,16 +25,56 @@
       <td> <%= f.select(:Subject, @subjects.map {|s| [s.EDSProgName, s.EDSProgName]},
         {:prompt => 'Select a subject'}) %></td>
     </tr>
-
+    
     <tr>
       <th> <%= f.label(:Rank, "Rank")%> </th>
       <td> <%= f.text_field(:Rank) %></td>
     </tr>
-
+    
     <tr>
-      <th> <%= f.label(:YearsExp, "Years Experience")%> </th>
-      <td> <%= f.text_field(:YearsExp) %></td>
+      <th> <%= f.label(:begin_service, "Date beginning service")%> </th>
+      
+    <td>    
+      <%= render(partial: 'date_picker', :locals => {
+                f: f,
+                field: :begin_service,
+                default: Date.today
+              } )%> 
+    </td>
     </tr>
-
+    
+    <tr>
+      <th> <%= f.label(:epsb_training, "EPSB Training")%> </th>
+    <td>    
+      <%= render(partial: 'date_picker', :locals => {
+                f: f,
+                field: :epsb_training,
+                default: Date.today
+              } )%> 
+    </td>
+    </tr>
+  
+    <tr>
+      <th> <%= f.label(:ct_record, "CT Record")%> </th>
+    <td>    
+      <%= render(partial: 'date_picker', :locals => {
+                f: f,
+                field: :ct_record,
+                default: Date.today
+              } )%> 
+    </td>
+    </tr>
+    
+    <tr>
+      <th> <%= f.label(:co_teacher_training, "Co-teacher Training")%> </th>
+    <td>    
+      <%= render(partial: 'date_picker', :locals => {
+                f: f,
+                field: :co_teacher_training,
+                default: Date.today
+              } )%> 
+    </td>
+    </tr>
+    
   </table>
  
