--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -60,12 +60,22 @@
       </tr>
     <% end %>
     
-    <% if @student.prog_status == "Prospective" %>
+        
+    <% if @student.prog_status == "Prospective" and @student.latest_foi == nil %>
+      <tr>
+        <th>Programs</th>
+        <td> </td>
+      </tr>
+    <% end %>
+        
+    <% if @student.prog_status == "Prospective" and @student.latest_foi != nil %>
       <tr>
         <th>Programs</th>
         <td><%= @student.latest_foi.major.name %></td>
       </tr>
     <% end %>
+
+
     
     <tr>
       <th>Current Majors</th>   	
