--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -51,32 +51,23 @@
         <th>Programs</th>
         <td><%= @student.programs.pluck("EDSProgName").join("; ") %></td>
       </tr>
-    <% end %>
-    
-    <% if @student.prog_status == "Completer" %>
+    <% elsif @student.prog_status == "Completer" %>
       <tr>
         <th>Programs</th>
         <td><%= @students.programs.pluck("EDSProgName").join("; ") %></td>
       </tr>
-    <% end %>
-    
-        
-    <% if @student.prog_status == "Prospective" and @student.latest_foi == nil %>
+    <% elsif @student.prog_status == "Prospective" and @student.latest_foi == nil %>
       <tr>
         <th>Programs</th>
         <td> </td>
       </tr>
-    <% end %>
-        
-    <% if @student.prog_status == "Prospective" and @student.latest_foi != nil %>
+    <% elsif @student.prog_status == "Prospective" and @student.latest_foi != nil %>
       <tr>
         <th>Programs</th>
         <td><%= @student.latest_foi.major.name %></td>
       </tr>
     <% end %>
 
-
-    
     <tr>
       <th>Current Majors</th>   	
       <td><%= [@student.CurrentMajor1, @student.CurrentMajor2].select{|m| (m !="" and m != nil)}.join(", ") %> </td>
