--- a/app/views/issues/new.html.erb
+++ b/app/views/issues/new.html.erb
@@ -12,19 +12,19 @@
 	<table summary="Issue form fields">
 
 	  <tr>
-	    <th><%= f.label(:Name, "Name") %> </th>
+	    <th><%= f.label(:Name, "Issue Name") %> </th>
 	    <td><%= f.text_field(:Name) %></td>
 	  </tr>
 
 	  <tr>
-	    <th><%= f.label(:Description, "Description") %></th>
+	    <th><%= f.label(:Description, "Issue Description") %></th>
 	    <td> <%= f.text_area(:Description, :size => '30x10') %> </td>
 	  </tr>
 
-    <tr>
-        <th><%= f.label(:positive, "Is this a positive note?") %></th>
-        <td> <%= f.check_box(:positive, ) %> </td>
-    </tr>
+    <%= fields_for :issue_update, @update do |update| %>
+      <th><%= update.label(:open, "Is this an open issue?") %></th>
+      <td> <%= update.check_box(:open) %> </td>
+    <% end %>
 
 
   	<tr>
@@ -32,11 +32,9 @@
 	<td>
     <div class="form-buttons">
       <%= submit_tag("Open Issue") %>
-
-
 	</td>
 	</tr>
-    </div>	
+    </div>
 	</table>
 
 
