--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -65,7 +65,7 @@
                       <% actions.push({disable: true, menu_name: "PGPs (#{student.pgps.size})", link_url: student_pgps_path(student.AltID)}) %>
                     <% end %>
 
-                    <% if can? :read, Issue %>
+                    <% if can? :show, Issue %>
                       <% actions.push({menu_name: "Issues (#{student.issues.select{|u| u.visible}.size})", link_url: student_issues_path(student.AltID)}) %>
                     <% else %>
                       <% actions.push({disable: true, menu_name: "Issues (#{student.issues.select{|u| u.visible}.size})", link_url: student_issues_path(student.AltID)}) %>
