fix to addressedssed switch
start on fix to populate

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  *= require nav_bar
  *= require concern_dashboard
  *= require_tree .
+ *= require bootstrap3-switch
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  /* Admin stylesheet       */
 /* load after public.css */
