--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -31,6 +31,7 @@
           <li> <%= link_to("Praxis Result Resolution", praxis_result_temps_path) %> </li>
           <li> <%= link_to("All students", reports_path) %></li>
           <li> <%= link_to("Forms of Intention", fois_path) %></li>
+          <li> <%= link_to("All Open Issues", issues_path) %> </li>
         </ul>
       </li>
 
