--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -7,21 +7,29 @@
   <div class="container-fluid">
     <table class="table">
       <div class="row">
-        <caption>
-          <div class="header1 col-xs-12">Issues for <%= name_details(@student)%></div></br>
+        <% if @student.present? %>
+          <caption>
+              <div class="header1 col-xs-12">Issues for <%= name_details(@student)%></div></br>
 
-          <div class="header2 col-xs-12"> <%= pluralize(@issues.size, "issue") + " found" %> </div>
-            <div class="col-xs-1">
-              <%= link_to new_student_issue_path(@student.AltID), :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>
-                  <span class="large-btn-text">New Issue</span>
-              <% end %>
-            </div>
-        </caption>
+            <div class="header2 col-xs-12"> <%= pluralize(@issues.size, "issue") + " found" %> </div>
+              <div class="col-xs-1">
+                <%= link_to new_student_issue_path(@student.AltID), :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>
+                    <span class="large-btn-text">New Issue</span>
+                <% end %>
+              </div>
+          </caption>
+
+        <% else %>
+          <caption>
+              <div class="header1 col-xs-12">All Open Issues</div></br>
+          </caption>
+        <% end %>
       </div>
 
-              <% if @student.issues.size > 0 %>
-
                 <tr class="header">
+                  <% if @student.blank? %>
+                    <th>Name</th>
+                  <% end %>
                   <th>Issue Name</th>
                   <th>Date Opened</th>
                   <th>Status</th>
@@ -30,6 +38,9 @@
                 <% @issues.each do |issue| %>
 
                 <tr class="<%= "alert alert-#{issue.current_status.status_color}"  %>">
+                  <% if @student.blank? %>
+                    <th><%= issue.student.name_readable %></th>
+                  <% end %>
                   <td> <%= issue.Name %></td>
                   <td> <%= issue.created_at.strftime("%m/%d/%Y")%> </td>
                   <td >
@@ -78,8 +89,6 @@
 
                 </tr>
                 <% end #end of loop iterating through records %>
-
-              <% end #end of conditional for table. %>
 
         </table>
     </div>
