tests for issue_update alert alert mailer

--- a/app/views/banner_update_mailer/possible_drop.html.erb
+++ b/app/views/banner_update_mailer/possible_drop.html.erb
@@ -23,7 +23,7 @@ Dear <%= "#{@adv.first_name} #{@adv.last_name}" %>, </br>
 </p>
 
 <p>
-  Sincerly, </br>
+  Sincerely, </br>
   Berea College Teacher Education Program
 </p>
 
