--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -9,7 +9,7 @@
       <div class="row">
         <% if @student.present? %>
           <caption>
-              <div class="header1 col-xs-12">Issues for <%= name_details(@student)%></div></br>
+              <div class="header1 col-xs-12">Issues for <%= @student.name_readable %></div></br>
 
             <div class="header2 col-xs-12"> <%= pluralize(@issues.size, "issue") + " found" %> </div>
               <div class="col-xs-1">
@@ -79,13 +79,15 @@
                           </span>
                       <% end %>
 
+                      <%= link_to edit_issue_path(issue.id), :class => "btn btn-default" do %>
+                      <span class="glyphicon glyphicon-pencil"></span>
+                      <% end %>
+
+                      <%= button_to(issue_path(issue.id), { class: "btn btn-default", method: :delete, data: {confirm: "Are you sure you want to delete this issue?"}} ) do %>
+                       <span class="glyphicon glyphicon-trash"</span>
+                      <% end %>
                   </td>
 
-                  <td>
-                     <%= button_to(issue_path(issue.id), { class: "btn btn-default", method: :delete, data: {confirm: "Are you sure you want to delete this issue?"}} ) do %>
-                      <span class="glyphicon glyphicon-trash"</span>
-                     <% end %>
-                  </td>
 
                 </tr>
                 <% end #end of loop iterating through records %>
