--- a/app/views/application/_advisor_navbar.html.erb
+++ b/app/views/application/_advisor_navbar.html.erb
@@ -15,6 +15,12 @@
           clinical_sites_path) %></li>
         </ul>
       </li>
+      <li class="dropdown active">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li> <%= link_to("All Open Issues", issues_path) %> </li>
+        </ul>
+      </li>
     </ul>
 
   </div>
