--- a/app/views/application/_stu_labor_navbar.html.erb
+++ b/app/views/application/_stu_labor_navbar.html.erb
@@ -16,7 +16,7 @@
         </ul>
       </li>
       <li class="dropdown active">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administration <span class="caret"></span></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li> <%= link_to("Praxis Result Resolution", praxis_result_temps_path) %> </li>
         </ul>
