--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
  *= require_tree .
  *= require bootstrap3-switch
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
+ *= require font-awesome
  /* Admin stylesheet       */
 /* load after public.css */
 
