--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
     <%= javascript_include_tag params[:controller] %>
     <%= javascript_include_tag 'application' %>
+		<%= javascript_include_tag 'all' %>
     <%= javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};" if protect_against_forgery? %>
 	</head>
 	<body>
