--- a/app/views/students/_status_popover.html.erb
+++ b/app/views/students/_status_popover.html.erb
@@ -9,6 +9,12 @@
 <a href="#" data-toggle="modal" data-target="#presumed_status-<%= stu.id %>">
   <%= stu.prog_status %>
 </a>
+<% if stu.presumed_status.present? %>
+  <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="Student has a presumed status"></i>
+<% end %>
+<% if stu.prog_status == "Prospective" && !stu.foi.any? %>
+  <i class="fa fa-question-circle" aria-hidden="true" data-toggle="tooltip" title="Student has not completed the Form of Intention"></i>
+<% end %>
 
 <!-- Modal -->
 <div class="modal fade" id="presumed_status-<%= stu.id %>" tabindex="-1" role="dialog" aria-labelledby="presumed_status-<%= stu.id %>label" aria-hidden="true">
