--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,3 +1,7 @@
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.12/b-1.2.2/b-html5-1.2.2/datatables.min.css"/>
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.12/b-1.2.2/b-html5-1.2.2/datatables.min.js"></script>
+
+
 <% @page_title = "Student Reports" %>
 
 <!-- insert back button -->
